Fixed vertical and horizontal overflow

--- a/scottysnacc/static/base.css
+++ b/scottysnacc/static/base.css
@@ -2,8 +2,8 @@ body {
     background-color: #F5F3F4;
     font-family: 'Inter', sans-serif;
     color:#212427;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 h2 {
     color:#A4161A;
@@ -95,8 +95,8 @@ h2 {
 }
 .map_page {
     display: flex;
-    width: 100vw;
-    height:100%
+    width: 100%;
+    height: calc(100% - 66px);
 }
 .map_newevent {
     flex: 2;
@@ -116,10 +116,10 @@ h2 {
     border-style: solid;
     border-width: 0.1em;
     border-radius: 3rem;
-    width:85vw;
-    height:75vh;
+    width:85%;
+    height:75%;
     margin-top:-85vh;
-    margin-left:5vw;
+    margin-left:5vh;
     position: absolute;
     z-index: 2;
 }
